# axum-mongo-crud

./: .env.sample  Cargo.toml  README.md
src/: controller.rs  main.rs  model.rs
src/controller/: book.rs
src/repository/: book.rs  mod.rs
