[package]
name = "axum-mongo-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
mongodb = "2.7.1"
tokio = { version ="1.34.0", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.108"
async-trait = "0.1.74"
